feat(income-source): refactor save command to use flow for input
This commit refactors the income-source-save command to use a flow for gathering input from the user.
This allows for a more interactive and user-friendly experience when creating or updating an income source.
It also adds validation to the IncomeSourceSaveDto to ensure that the data entered by the user is valid.